--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "typecheck": "nuxt typecheck",
         "lint": "eslint .",
         "lint:fix": "eslint --fix",
-        "prepare": "simple-git-hooks"
+        "prepare": "simple-git-hooks",
+        "generatore:oxlint:rules": "oxnode ./scripts/generator-oxlint-rules.ts && pnpm lint:fix"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
@@ -34,14 +35,21 @@
         "@nuxt/content": "^3.10.0",
         "@nuxt/eslint": "^1.12.1",
         "@nuxt/icon": "^2.1.1",
+        "@types/node": "^25.2.3",
         "@vueuse/nuxt": "^14.1.0",
+        "cheerio": "^1.2.0",
         "eslint": "^9.39.2",
+        "giget": "^3.1.2",
         "lint-staged": "^16.2.7",
+        "marked": "^17.0.3",
         "nuxt": "^4.2.2",
         "oxlint": "^1.48.0",
+        "oxnode": "^0.0.34",
         "picocolors": "^1.1.1",
+        "rimraf": "^6.1.3",
         "shadcn-nuxt": "^2.4.3",
         "simple-git-hooks": "^2.13.1",
+        "tinyexec": "^1.0.2",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3"
     },
