--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.18",
         "vue": "^3.5.26",
+        "vue-json-pretty": "^2.6.0",
         "vue-router": "^4.6.4"
     },
     "devDependencies": {
