--- a/package.json
+++ b/package.json
@@ -1,42 +1,65 @@
 {
-  "name": "oxlint-config-generator",
-  "private": true,
-  "type": "module",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxi dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint:fix": "eslint --fix"
-  },
-  "dependencies": {
-    "@arco-design/web-vue": "^2.57.0",
-    "@pinia/nuxt": "^0.11.2",
-    "@tailwindcss/vite": "^4.1.11",
-    "@vueuse/core": "^14.0.0",
-    "@vueuse/nuxt": "^14.0.0",
-    "arco-design-nuxt-module": "^0.2.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "nuxt": "^4.0.0",
-    "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.4.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.5",
-    "vue": "^3.5.17",
-    "vue-json-pretty": "^2.5.0",
-    "vue-router": "^5.0.0",
-    "vue-virtual-scroller": "^2.0.0-beta.8"
-  },
-  "devDependencies": {
-    "@nuxt/eslint": "^1.6.0",
-    "@nuxt/icon": "^2.0.0",
-    "@types/node": "^24.0.14",
-    "axios": "^1.10.0",
-    "eslint": "^10.0.0",
-    "typescript": "^5.8.3"
-  }
+    "name": "oxlint",
+    "type": "module",
+    "description": "Oxlint Config Generator is a powerful tool designed to generate and manage oxlint configuration files. It provides an intuitive interface that helps developers quickly create, customize, and optimize oxlint configurations without manually writing complex configuration files.",
+    "packageManager": "pnpm@10.28.2",
+    "homepage": "https://github.com/lonewolfyx/oxlint",
+    "bugs": {
+        "url": "https://github.com/lonewolfyx/oxlint/issues"
+    },
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "typecheck": "nuxt typecheck",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix",
+        "prepare": "simple-git-hooks",
+        "generatore:oxlint:rules": "oxnode ./scripts/generator-oxlint-rules.ts && pnpm lint:fix"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.2.0",
+        "@vueuse/core": "^14.2.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.545.0",
+        "reka-ui": "^2.8.2",
+        "tailwind-merge": "^3.5.0",
+        "tailwindcss": "^4.2.0",
+        "vue": "^3.5.28",
+        "vue-json-pretty": "^2.6.0",
+        "vue-router": "^4.6.4"
+    },
+    "devDependencies": {
+        "@nuxt/content": "^3.11.2",
+        "@nuxt/eslint": "^1.15.1",
+        "@nuxt/icon": "^2.2.1",
+        "@types/node": "^25.3.0",
+        "@vueuse/nuxt": "^14.2.1",
+        "cheerio": "^1.2.0",
+        "eslint": "^9.39.3",
+        "giget": "^3.1.2",
+        "lint-staged": "^16.2.7",
+        "marked": "^17.0.3",
+        "nuxt": "^4.3.1",
+        "oxlint": "^1.49.0",
+        "oxnode": "^0.0.34",
+        "picocolors": "^1.1.1",
+        "rimraf": "^6.1.3",
+        "shadcn-nuxt": "^2.4.3",
+        "simple-git-hooks": "^2.13.1",
+        "tinyexec": "^1.0.2",
+        "tw-animate-css": "^1.4.0",
+        "typescript": "^5.9.3"
+    },
+    "simple-git-hooks": {
+        "pre-commit": "npx lint-staged",
+        "commit-msg": "node scripts/verify-commit.js"
+    },
+    "license": "MIT",
+    "lint-staged": {
+        "*": "eslint --fix"
+    }
 }
